# equancy_technical_assessment

./: README.md  pyproject.toml
data/: README.md
src/equancy_technical_assessment/: __init__.py  answers copy 2.ipynb  answers copy.ipynb  answers.ipynb
