[project]
name = "equancy-technical-assessment"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jean Christophe Cazes", email = "cazes.jean.christophe@gmail.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "xgboost>=3.0.1",
    "scikit-optimize>=0.10.2",
    "kneed>=0.8.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/equancy_technical_assessment"]
